--- a/vidler-backend/src/main/resources/application.properties
+++ b/vidler-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:mysql://localhost:3306/springsecurity?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
-spring.datasource.password= 123
+spring.datasource.password=
 
 ## Hibernate Properties
 
@@ -25,3 +25,4 @@ spring.jackson.time-zone= UTC
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
+
