--- a/vidler-backend/src/main/resources/application.properties
+++ b/vidler-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:mysql://localhost:3306/springsecurity?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
-spring.datasource.password=
+spring.datasource.password= 123
 
 ## Hibernate Properties
 
@@ -26,3 +26,8 @@ spring.jackson.time-zone= UTC
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 
+# AWS Bucket Access
+aws.endpointUrl = https://s3.us-east-1.amazonaws.com/
+aws.accessKey = AKIAWWKCXRIVDXHFK5FJ
+aws.secretKey = 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
+aws.bucketName = vidler-storage
