Implemented user controller and show username in navbar.

--- a/vidler-backend/src/main/resources/application.properties
+++ b/vidler-backend/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.jackson.time-zone= UTC
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 
+# AWS Bucket Access
+aws.endpointUrl = 
+aws.accessKey = 
+aws.secretKey = 
+aws.bucketName = 
