--- a/vidler-backend/src/main/resources/application.properties
+++ b/vidler-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url= jdbc:mysql://localhost:3306/springsecurity?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
-spring.datasource.password=
+spring.datasource.password= ${MYSQL_PASSWORD}
 
 ## Hibernate Properties
 
@@ -27,7 +27,7 @@ app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 
 # AWS Bucket Access
-aws.endpointUrl = 
-aws.accessKey = 
-aws.secretKey = 
-aws.bucketName = 
+aws.endpointUrl =
+aws.accessKey =
+aws.secretKey =
+aws.bucketName =
